<resources>
  <string name="app_name">CodePathToDo</string>
  <string name="action_settings">Settings</string>

  <string name="todo_dialog_caption">Task</string>

  <string name="todo_name_label">Name:</string>
  <string name="todo_notes_label">Notes:</string>
  <string name="todo_due_date_label">Due Date:</string>
  <string name="todo_priority_level_label">Priority Level:</string>
  <string name="todo_status_label">Status:</string>

  <string name="todo_level_low">Low</string>
  <string name="todo_level_medium">Medium</string>
  <string name="todo_level_high">High</string>

  <string name="todo_status_complete">Complete</string>
  <string name="todo_status_incomplete">Incomplete</string>

  <string name="todo_button_save">Save</string>
  <string name="todo_button_discard">Discard</string>

  <string name="loading_todos">Loading Todos...</string>
  <string name="cd_todo_list">Todo List</string>

  <string-array name="todo_priority_array">
    <item>@string/todo_level_low</item>
    <item>@string/todo_level_medium</item>
    <item>@string/todo_level_high</item>
  </string-array>

  <string-array name="todo_status_array">
    <item>@string/todo_status_complete</item>
    <item>@string/todo_status_incomplete</item>
  </string-array>

</resources>
