<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <variable name="todoViewModel" type="com.zarkorunjevac.codepathtodo.viewmodel.TodoViewModel"/>
  </data>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
      android:id="@+id/content"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <EditText
        android:id="@+id/txtTodoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/todo_name_label"
        android:text="@{todoViewModel.todo.getName()}" />
      <EditText
        android:id="@+id/txtTodoNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/todo_notes_label"
        android:inputType="textMultiLine"
        android:lines="3"
        android:text="@{todoViewModel.todo.getTaskNotes()}" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="16dp"
    android:orientation="vertical">

      <TextView
        android:id="@+id/dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:text="@string/todo_due_date_label" />

      <DatePicker
        android:id="@+id/dpDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="0dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:text="@string/todo_priority_level_label" />
      <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spnPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/todo_priority_array"
        android:gravity="right|end"
        android:selectedItemPosition="@{todoViewModel.todo.getPriorityLevel()}"
        android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="16dp"
      android:orientation="horizontal">
      <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:text="@string/todo_status_label" />
      <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spnStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/todo_status_array"
        android:gravity="right|end"
        android:selectedItemPosition="@{todoViewModel.todo.getStatus()}"
        android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="16dp"
      android:orientation="vertical">

      <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/todo_button_save" />

    </LinearLayout>
    </LinearLayout>
    </FrameLayout>
  </ScrollView>


  </layout>